--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.16.0",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.9.0",
     "google-maps": "^4.3.2",
     "gsap": "^3.4.1",
+    "vee-validate": "^3.3.8",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vuetify": "^2.2.11",
